<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datum_pocetka_label_r"
        android:textStyle="bold"
        android:layout_marginTop="8dp"/>
    <EditText
        android:id="@+id/input_start_date"
        android:hint="@string/datum_pocetka_hint_r"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datum_zavrsetka_label_r"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>
    <EditText
        android:id="@+id/input_end_date"
        android:hint="@string/datum_zavrsetka_hint_r"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ocjena_label_r"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>
    <EditText
        android:id="@+id/input_review"
        android:hint="@string/ocjena_hint_r"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>