<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/detail_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/naslov_d" />

        <TextView
            android:id="@+id/detail_author"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autor_d" />

        <TextView
            android:id="@+id/detail_status"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_d" />

        <TextView
            android:id="@+id/detail_extra"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detail_notes"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/biljeske_d" />

        <Button
            android:id="@+id/button_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dugme_uredi"
            android:layout_marginTop="24dp" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dugme_obrisi"
            android:layout_marginTop="8dp" />

    </LinearLayout>
</ScrollView>
